--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.5",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
